# src/routes/api.ts
@@ -9,5 +9,7 @@ router.get("/dummy", dummyController.dummy);
 router.post("/auth/register", authController.register);
 router.post("/auth/login", authController.login);
 router.get("/auth/me", authMiddleware, authController.me);
+// Jika terdapat error TypeError: Failed to execute 'fetch' on 'Window': Request with GET/HEAD method cannot have body. Masalahnya disini
+router.post("/auth/activation", authController.activation);
 
 export default router;
